# gulfview

./: .env.example  .gitignore  HANDOVER.md  README.md  pyproject.toml
app/: streamlit_app.py
data/globalenergymonitor/: Africa-Energy-Tracker-2026-03-24.xlsx  Asia-Gas-Tracker-2026-03-02.xlsx  Europe-Gas-Tracker-2026-03-02.xlsx  GMET_V3_12-12-2025.xlsx  Gas-Finance-Tracker-Data-December-2025.xlsx  Global-Iron-Ore-Mines-Tracker-August-2025-V1.xlsx  Global-Oil-and-Gas-Plant-Tracker-GOGPT-January-2026.xlsx  Iron-unit-data-Global-Iron-and-Steel-Tracker-March-2026-V1.xlsx  Plant-level-data-Global-Iron-and-Steel-Tracker-March-2026-V1.xlsx  (+2 more)
loaders/: load_baci.py  load_cepi_beyond_baci.py  load_gem_pipelines.py  load_gem_xlsx.py  load_jodi.py  load_subsea_cables.py  load_usgs.py
pullers/: pull_comtrade_hs_lookup.py  pull_eia.py  pull_faostat.py  pull_usda_psd.py  pull_worldbank.py  pull_worldbank_wdi.py
schema/: _mcp_rpc_part1.sql  _mcp_rpc_part2.sql  alter_trade_group_dependency_snapshots_job.sql  create_tables.sql  rpc_trade_dashboards.sql  seed_table_catalog.sql
scripts/: geocode_usgs_facilities.py  probe_trade_distinct_remote.py  probe_trade_rpc_mock.py  run_group_dependency_snapshot.py  validate_myb3_table2.py  verify.sh
tests/: postgrest_local_mock.py  test_group_dependency_compute.py  test_postgrest_mock_connection.py  test_postgrest_retry.py
utils/: __init__.py  gem_facility_categories.py  gem_map_support.py  gem_regions.py  group_dependency_compute.py  jodi_display.py  pipeline_logger.py  postgrest_retry.py  supabase_client.py
(+15 files in other folders)
